fixed layout issues

--- a/_sass/_joey.scss
+++ b/_sass/_joey.scss
@@ -93,37 +93,63 @@
         background: url('../images/turtle-doves-bg.jpg') no-repeat center center;
         background-size: cover;
 
+        & > .art {
+            width: 35%;
+            max-width: 900px;
+            height: 100%;
+
+            @media (max-width: 1024px) {
+                width: 70%;
+            }
+        }
+
         .birds {
             width: 500px;
             position: absolute;
             top: 50%;
-            left: 175px;
+            left: 0;
             transform: translateY(-50%);
-        }
-    }
-    &.panel > .text-wrapper {
-        position: absolute;
-        right: 500px;
-        width: 300px;
-        top: 50%;
-        transform: translateY(-50%);
-    }
-    &.panel .art {
-        width: 100%;
-        position: relative;
 
-        p {
-            font-size: 41px;
-            font-weight: 600;
-            color: #fff;
+            @media (max-width: 1024px) {
+                width: 200px;
+                top: 40%;
+                bottom: 0;
+                right: 0;
+                left: auto;
+            }
         }
 
-        .homemade-apple {
+        .text-wrapper {
+            position: relative;
+        }
+
+        .text {
+            width: 300px;
             position: absolute;
-            bottom: -110px;
-            right: -120px;
-            font-size: 80px;
-            color: #eaff98;
+            top: 50%;
+
+            transform: translateY(-50%);
+            right: 0;
+
+            p {
+                position: relative;
+                font-size: 41px;
+                font-weight: 600;
+                color: #fff;
+            }
+
+            .homemade-apple {
+                position: absolute;
+                bottom: -110px;
+                right: -120px;
+                font-size: 80px;
+                color: #eaff98;
+            }
+
+            @media (max-width: 1024px) {
+                width: 300px;
+                right: auto;
+            }
         }
     }
 }
